@@ -176,14 +176,16 @@ grub_efiemu_loadcore_load (void)
   switch (grub_efiemu_mode)
     {
     case GRUB_EFIEMU32:
-      if ((err = grub_efiemu_loadcore_load32 (efiemu_core, efiemu_core_size,
-					      efiemu_segments)))
-	  grub_efiemu_loadcore_unload ();
+      err = grub_efiemu_loadcore_load32 (efiemu_core, efiemu_core_size,
+					 efiemu_segments);
+      if (err)
+	grub_efiemu_loadcore_unload ();
       return err;
     case GRUB_EFIEMU64:
-      if ((err = grub_efiemu_loadcore_load64 (efiemu_core, efiemu_core_size,
-					      efiemu_segments)))
-	  grub_efiemu_loadcore_unload ();
+      err = grub_efiemu_loadcore_load64 (efiemu_core, efiemu_core_size,
+					 efiemu_segments);
+      if (err)
+	grub_efiemu_loadcore_unload ();
       return err;
     default:
       return grub_error (GRUB_ERR_BUG, "unknown EFI runtime");
